[package]
name = "discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
formats = { path = "../formats" }
io = { path = "../io" }
enrich = { path = "../enrich", optional = true }
netutils = { path = "../netutils" }
csv = "1.1"
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }

[features]
default = ["enrich"]

[dev-dependencies]
tempfile = "3.4"
